<resources>
    <string name="app_name">Ingress map</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_main">Ingress map</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_map">Map</string>
    <string name="menu_settings">Settings</string>
    <!-- Preference Titles -->
    <string name="visibility_header">Visibility</string>
    <string name="permissions_header">Permissions</string>
    <string name="drawing_header">Draw</string>

    <!-- Drawing Preferences -->
    <string name="draw_enable">Draw mode</string>

    <!-- Permissions Preferences -->
    <string name="my_location">Enable go to my location marker</string>

    <!-- Sync Preferences -->
    <string name="show_portals">Show portals</string>
    <string name="show_links">Show links</string>
    <string name="show_fields">Show fields</string>
    <string name="show_cells">Show cells</string>

    <!-- Map -->
    <string name="status_ok">Status: up to date</string>
    <string name="status_in_progress">Status: %d requests in progress, please, wait…</string>

    <!-- Portal Info -->
    <string name="portal_energy">%d XM</string>
    <string name="portal_level_label">Level:</string>
    <string name="portal_energy_label">Energy:</string>
    <string name="portal_picture_desc">Portal picture</string>
    <string name="resonators_header_label">Resonators:</string>
    <string name="nick_label">Nick:</string>
    <string name="level_label">Level:</string>

    <string-array name="map_providers">
        <item>Google map</item>
        <item>OpenStreetMap</item>
    </string-array>
    <string-array name="map_providers_values">
        <item />
        <item>osm</item>
    </string-array>

    <string-array name="themes">
        <item>System</item>
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string-array name="themes_values">
        <item>-1</item>
        <item>1</item>
        <item>2</item>
    </string-array>
</resources>
